adding lab 3 and peer activity 3

--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ This page contains an outline of the topics, content, and assignments for the qu
 |         |              |                                                              |                                                                                                                                   |
 |         |              |                                                              | [Pair Activity 2: Secret Code Revisited](group-activities/week-3/pa2-vc-instructions.qmd)                                         |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 4       | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       |                                                                                                                                   |
+| 4       | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       | [Pair Activity 3: Finding Penguins](group-activities/week-4/pa-3-ggplot.qmd)                                                      |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 5       | Friday, 2/21 | [Importing Data](weeks/week-5-projects-data-import.qmd)      |                                                                                                                                   |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
