--- a/labs/instructions/lab-3-instructions.qmd
+++ b/labs/instructions/lab-3-instructions.qmd
@@ -1,12 +1,18 @@
 ---
 title: "Lab 3: Exploring Rodents with `ggplot2`"
-author: "Your name here!"
-format: gfm
+author: "Instructions"
+format: html
 editor: source
-embed-resources: true
-execute: 
+number-sections: true
+number-depth: 2
+toc: true
+code-tools: true
+execute:
+  echo: true
   eval: false
-  echo: false
+  message: false
+  warning: false
+  error: true
 ---
 
 # Part 1: Setup
@@ -19,11 +25,11 @@ Use appropriate naming conventions for your project (see Code Style Guide), e.g.
 
 Your project folder should contain the following:  
 
-- `.Rproj`  
-- `lab-3-student.qmd`  
-- `data` folder  
-    + `surveys.csv`  
-- rendered document (`.md`)  
+- .Rproj  
+- [lab-3-student.qmd](../student/lab-3-student.qmd) 
+- "data" folder
+    + [surveys.csv](../student/data/surveys.csv)
+- rendered document
 
 You will submit a link to your GitHub repository with all content. 
 
@@ -206,3 +212,109 @@ For Lab 3 you will submit the link to your GitHub repository. Your rendered file
 **If any of the options are not included, your Lab 3 or Challenge 3 assignment will receive an "Incomplete" and you will be required to submit a revision.**
 
 In addition, your document should not have any warnings or messages output in your HTML document. **If your HTML contains warnings or messages, you will receive an "Incomplete" for document formatting and you will be required to submit a revision.**
+
+
+
+# Challenge Problems
+
+For this week's Challenge, you will have three different options to explore. I've arranged these options in terms of their "spiciness," or the difficulty of completing the task. **You  only need to complete one task to complete the challenge, but if you are interested in exploring more than one, feel free!**
+
+This is a great place to let your creativity show! Make sure to indicate what additional touches you added, and provide any online references you used.
+
+
+# `r emo::ji("hot_pepper")` Medium: Ridge Plots
+
+In Lab 3, you used side-by-side **boxplots** to visualize the distribution of weight within each species of rodent. Boxplots have [substantial flaws](https://www.data-to-viz.com/caveat/boxplot.html), namely that they disguise distributions with multiple modes.
+
+A "superior" alternative is the density plot. However, `ggplot2` does not allow for side-by-side density plots using `geom_density()`. Instead, we will need to make use of the `ggridges` package to create side-by-side density (ridge) plots.
+
+> **For this challenge you are to change your boxplots to ridge plots. You will need to install the `ggridges` package and explore the `geom_density_ridges()` function.**
+
+# `r emo::ji("hot_pepper")` `r emo::ji("hot_pepper")` Spicy: Exploring Color Themes
+
+The built-in `ggplot()` color scheme may not include the colors you were looking for. Don't worry -- there are many other color palettes available to use!
+
+You can change the colors used by `ggplot()` in a few different ways.
+
+### Manual Specification
+
+Add the `scale_color_manual()` or `scale_fill_manual()` functions to your plot and directly specify the colors you want to use. You can either:
+
+1.  define a vector of colors within the `scale` functions (e.g. `values = c("blue", "black", "red", "green")`) OR
+
+2.  create a vector of colors using hex numbers and store that vector as a variable. Then, call that vector in the `scale_color_manual()` function. 
+
+Here are some example hex color schemes:
+
+```{r}
+#| echo: true
+#| label: example-manual-colors
+
+# A vector of a RG color deficient friendly palette with gray:
+cdPalette_grey <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+
+# A vector of a RG color deficient friendly palette with black:
+cdPalette_blk <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+```
+
+::: callout-note
+If you are interested in using specific hex colors, I like the [image color picker app](https://imagecolorpicker.com/en) to find the colors I want. 
+:::
+
+```{r}
+#| include: false
+
+ggplot(data = surveys, 
+       mapping = aes(x = weight, y = species, color = genus)
+       ) +
+  geom_boxplot() +
+  scale_color_manual(values = cdPalette_grey) +
+  labs(x = "Weight (g)", 
+       y = "", 
+       subtitle = "by Rodent Species", 
+       legend = "Genus")
+```
+
+### Package Specification
+
+While manual specification may be necessary for some contexts, it can be a real pain to handpick 5+ colors. This is where color scales built-in to R packages come in handy! Popular packages for colors include:
+
+-   `RColorBrewer` -- change colors by using `scale_fill_brewer()` or `scale_colour_brewer()`.
+
+-   `viridis` -- change colors by using `scale_colour_viridis_d()` for discrete data, `scale_colour_viridis_c()` for continuous data.
+
+-   `ggsci` -- change colors by using `scale_color_<PALNAME>()` or `scale_fill_<PALNAME>()`, where you specify the name of the palette you wish to use (e.g. `scale_color_aaas()`).
+
+::: callout-note
+[This website](https://github.com/EmilHvitfeldt/r-color-palettes) provides an exhaustive list of color themes available through various packages.
+:::
+
+> **In this challenge you are expected to use this information to modify the boxplots you created Lab 3. First, you are to color the boxplots based on the variable `genus`. Next, you are to change the colors used for `genus` using either manual color specification or any of the packages listed here (or others!).**
+
+# `r emo::ji("hot_pepper")` `r emo::ji("hot_pepper")` `r emo::ji("hot_pepper")` Hot: Exploring `ggplot2` Annotation
+
+Some data scientists advocate that we should try to eliminate legends from our plots to make them more clear. Instead of using legends, which cause the reader's eye to stray from the plot, we should use **annotation**.
+
+We can add annotation(s) to a `ggplot()` using the `annotate()` function:
+
+```{r}
+#| echo: true
+#| label: example-annotation
+
+ggplot(data = surveys, 
+       mapping = aes(x = weight, y = species, color = genus)
+       ) +
+  geom_boxplot() +
+  scale_color_manual(values = cdPalette_grey) + 
+  annotate("text", y = 6, x = 200, label = "Sigmodon") +
+  annotate("text", y = 4, x = 200, label = "Perognathus") +
+  theme(legend.position = "none") +
+  labs(x = "Weight (g)",
+       y = "",
+       subtitle = "by Species and Genera",
+       title = "Rodent Weight")
+```
+
+Note that I've labeled the "Sigmodon" and "Perognathus" genera, so the reader can tell that these boxplots are associated with their respective genus.
+
+> **In this challenge you are expected to use this information to modify the boxplots you created in Lab 3. First, you are to color the boxplots based on the variable `genus`. Next, you are to add annotations for each genus next to the boxplot(s) associated with that genus. Finally, you are expected to use the `theme()` function to remove the color legend from the plot, since it is no longer needed!**
