--- a/slides/week-4/week-4-ggplot.qmd
+++ b/slides/week-4/week-4-ggplot.qmd
@@ -12,9 +12,7 @@ editor: source
 library(tidyverse)
 ```
 
-## Tuesday, October 1
-
-Today we will...
+## Today we will...
 
 + Accessing Practice Activities
 + Review
