add week 5 activity

--- a/index.qmd
+++ b/index.qmd
@@ -7,22 +7,22 @@ This page contains an outline of the topics, content, and assignments for the qu
 
 <!-- TODO: Switch to spreadsheet for content (like Mine and Maria do) -->
 
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| Week    | Date         | Topic & Preview Activities                                   | Practice Activity                                                                                                                 |
-+=========+==============+==============================================================+===================================================================================================================================+
-| 1       | Friday, 1/24 | [Intro to R & RStudio](weeks/week-1-r-rstudio.qmd)           | [Broken Circles Group Warm-up](group-activities/week-1/broken-circles.qmd "Broken Circles Group Warm-up")                         |
-|         |              |                                                              |                                                                                                                                   |
-|         |              |                                                              | [Creating Pair Programming Norms](/group-activities/pair-programming-norms.qmd "Creating Pair Programming Norms")                 |
-|         |              |                                                              |                                                                                                                                   |
-|         |              |                                                              | [Data Cleaning, Visualization Puzzle](/group-activities/week-1/data-cleaning-viz-steps.qmd "Data Cleaning, Visualization Puzzle") |
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 2       | Friday, 1/31 | [Intro to Quarto](weeks/week-2-quarto.qmd)                   | [Pair Activity 1: Secret Code](group-activities/week-2/pa1-base-r.qmd)                                                            |
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 3       | Friday, 2/7  | [Intro to Version Control](weeks/week-3-version-control.qmd) | [Expert Designer](group-activities/week-2/expert-designer.qmd)                                                                    |
-|         |              |                                                              |                                                                                                                                   |
-|         |              |                                                              | [Pair Activity 2: Secret Code Revisited](group-activities/week-3/pa2-vc-instructions.qmd)                                         |
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 4       | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       | [Pair Activity 3: Finding Penguins](group-activities/week-4/pa-3-ggplot.qmd)                                                      |
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 5       | Friday, 2/21 | [Importing Data](weeks/week-5-projects-data-import.qmd)      |                                                                                                                                   |
-+---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| Week     | Date         | Topic & Preview Activities                                   | Practice Activity                                                                                                                 |
++==========+==============+==============================================================+===================================================================================================================================+
+| 1        | Friday, 1/24 | [Intro to R & RStudio](weeks/week-1-r-rstudio.qmd)           | [Broken Circles Group Warm-up](group-activities/week-1/broken-circles.qmd "Broken Circles Group Warm-up")                         |
+|          |              |                                                              |                                                                                                                                   |
+|          |              |                                                              | [Creating Pair Programming Norms](/group-activities/pair-programming-norms.qmd "Creating Pair Programming Norms")                 |
+|          |              |                                                              |                                                                                                                                   |
+|          |              |                                                              | [Data Cleaning, Visualization Puzzle](/group-activities/week-1/data-cleaning-viz-steps.qmd "Data Cleaning, Visualization Puzzle") |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 2        | Friday, 1/31 | [Intro to Quarto](weeks/week-2-quarto.qmd)                   | [Pair Activity 1: Secret Code](group-activities/week-2/pa1-base-r.qmd)                                                            |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 3        | Friday, 2/7  | [Intro to Version Control](weeks/week-3-version-control.qmd) | [Expert Designer](group-activities/week-2/expert-designer.qmd)                                                                    |
+|          |              |                                                              |                                                                                                                                   |
+|          |              |                                                              | [Pair Activity 2: Secret Code Revisited](group-activities/week-3/pa2-vc-instructions.qmd)                                         |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 4        | Friday, 2/14 | [Intro to Data Visualization](weeks/week-4-ggplot.qmd)       | [Pair Activity 3: Finding Penguins](group-activities/week-4/pa-3-ggplot.qmd)                                                      |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 5        | Friday, 2/21 | [Importing Data](weeks/week-5-projects-data-import.qmd)      | [Pair Activity 4: Evaluating Youth Risk](group-activities/week-5/pa-4-import-tidy-data.qmd)                                       |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
